--- a/unihub/users-service/src/main/webapp/WEB-INF/shiro.ini
+++ b/unihub/users-service/src/main/webapp/WEB-INF/shiro.ini
@@ -35,6 +35,8 @@ user.loginUrl = ../../../login
 [urls]
 /rest/users/add = anon
 /rest/users/confirm = anon
+/rest/users/request_password_reset = anon
+/rest/users/reset_password = anon
 /rest/users/isLoggedIn = anon
 /rest/users/login = anon
 /rest/users/logout = logout
